fix text and social bubble overflow

--- a/src/App.css
+++ b/src/App.css
@@ -355,6 +355,19 @@ footer {
   .skill img {
     max-width: 50px;
   }
+  .hero-socials {
+    flex-direction: row; /* Stack items vertically on small screens */
+    gap: 10px; /* Increased gap when stacked */
+    margin: 20px; /* Reduced margin on small screens */
+  }
+
+  .hero-socials img {
+    max-width: 35px; /* Make images smaller on mobile */
+  }
+
+  .hero-socials a {
+    padding: 1rem; /* Adjust padding on small screens */
+  }
 }
 .hero-socials {
   display: flex;
@@ -363,8 +376,11 @@ footer {
   gap: 5px;
   margin: 30px;
   margin-bottom: 40px;
+  flex-wrap: wrap;
 }
 .hero-socials img {
+  justify-content: space-evenly;
+
   max-width: 45px;
   transition: 0.2s all ease-in-out;
 }
@@ -372,7 +388,8 @@ footer {
   transform: scale(1.3);
 }
 .hero-socials a {
-  padding: 22px;
+  justify-content: space-evenly;
+  padding: 1.5rem;
   background: rgba(5, 0, 0, 0.3);
   box-shadow: 0 8px 32px 0 rgba(31, 41, 135, 0.37);
   backdrop-filter: blur(6px);
@@ -462,7 +479,7 @@ form > input[type="submit"]:hover {
   gap: 20px;
 }
 .contact-links {
-  font-size: 25px;
+  font-size: larger;
   display: flex;
   align-items: center;
   gap: 15px;
